[fix] dashboard side bar link icon wrapping.

--- a/src/sass/components/common/_side-bar.sass
+++ b/src/sass/components/common/_side-bar.sass
@@ -31,7 +31,7 @@
         padding: .5em 1em
         border-radius: 5px
         margin-bottom: .3em
-        display: block
+        display: flex
 
         &--active
             background-color: #F8F7F7
